@@ -43,6 +43,7 @@
     <string name="message">Nhắn tin</string>
     <string name="someone">Một người ai đó</string>
     <string name="active">Truy cập</string>
+    <string name="reminders_notification_channel_description">Lời nhắc của bạn.</string>
     <string name="messages_notification_channel_description">Tin nhắn từ người.</string>
     <string name="collaboration_notification_channel_description">Thông báo hợp tác.</string>
     <string name="host_notification_channel_description">Thông báo chủ trì nhóm.</string>
