@@ -1,15 +1,16 @@
 package com.queatz
 
-import com.queatz.db.ReminderOccurrences
+import ReminderEvent
 import com.queatz.db.occurrences
 import com.queatz.plugins.db
 import com.queatz.plugins.notify
-import com.queatz.plugins.push
 import kotlinx.coroutines.CoroutineScope
 import kotlinx.coroutines.flow.MutableStateFlow
 import kotlinx.coroutines.flow.update
 import kotlinx.coroutines.launch
 import kotlinx.datetime.Clock
+import toEvents
+import java.util.logging.Logger
 import kotlin.time.Duration.Companion.milliseconds
 import kotlin.time.Duration.Companion.minutes
 import kotlin.time.Duration.Companion.seconds
@@ -22,7 +23,7 @@ class Remind {
     fun start(scope: CoroutineScope) {
         this.scope = scope
 
-        var minute = MutableStateFlow((Clock.System.now() - 1.minutes).startOfMinute())
+        val minute = MutableStateFlow((Clock.System.now() - 1.minutes).startOfMinute())
 
         scope.launch {
             while (true) {
@@ -32,20 +33,22 @@ class Remind {
         }
 
         scope.launch {
-            minute.collect {
+            minute.collect { minute ->
+                Logger.getAnonymousLogger().info("REMIND minute=$minute")
                 pushReminders(
-                    db.occurrences(null, it, it + 59.seconds + 999.milliseconds)
+                    db.occurrences(null, minute, minute).toEvents().filter {
+                        it.date >= minute && it.date < minute + 1.minutes
+                    }
                 )
             }
         }
     }
 
-    private fun pushReminders(occurrences: List<ReminderOccurrences>) {
-        occurrences.forEach {
-            it.dates.forEach { date ->
-                val occurrence = it.occurrences.firstOrNull { it.date == date }
-                notify.reminder(it.reminder, occurrence)
-            }
+    private fun pushReminders(events: List<ReminderEvent>) {
+        Logger.getAnonymousLogger().info("REMIND events=${events.size}")
+        events.forEach {
+            Logger.getAnonymousLogger().info("REMIND reminder=${it.reminder.title} date=${it.date} event=${it.event}")
+            notify.reminder(it.reminder, it.occurrence)
         }
     }
 }
