@@ -1,0 +1,35 @@
+plugins {
+    kotlin("multiplatform") version "1.9.21"
+    kotlin("plugin.serialization") version "1.9.21"
+}
+
+group = "app.ailaai.shared"
+version = "1.0-SNAPSHOT"
+
+kotlin {
+    jvm {
+        jvmToolchain(17)
+        withJava()
+    }
+    js {
+        browser {
+
+        }
+    }
+    iosX64()
+    iosArm64()
+    iosSimulatorArm64()
+
+    sourceSets {
+        val commonMain by getting {
+            dependencies {
+                implementation(project(":models"))
+                implementation("org.jetbrains.kotlinx:kotlinx-datetime:0.4.1")
+                implementation("org.jetbrains.kotlinx:kotlinx-serialization-core:1.6.0")
+                implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0")
+            }
+        }
+        val jvmMain by getting
+        val jsMain by getting
+    }
+}
