@@ -1,6 +1,9 @@
 0.9.74
 ======
 
+ - Reminder notifications
+ - Group video calls
+
 0.9.73
 ======
 
